@@ -3,8 +3,9 @@ package com.NBE4_5_SukChanHoSu.BE.global.jwt.service;
 import com.NBE4_5_SukChanHoSu.BE.domain.user.dto.response.LoginResponse;
 import com.NBE4_5_SukChanHoSu.BE.domain.user.entity.Role;
 import com.NBE4_5_SukChanHoSu.BE.domain.user.entity.User;
-import com.NBE4_5_SukChanHoSu.BE.domain.user.entity.UserErrorCode;
 import com.NBE4_5_SukChanHoSu.BE.domain.user.repository.UserRepository;
+import com.NBE4_5_SukChanHoSu.BE.domain.user.responseCode.UserErrorCode;
+import com.NBE4_5_SukChanHoSu.BE.global.exception.ServiceException;
 import com.NBE4_5_SukChanHoSu.BE.global.exception.security.BlacklistedTokenException;
 import com.NBE4_5_SukChanHoSu.BE.global.exception.security.InvalidRefreshTokenException;
 import com.NBE4_5_SukChanHoSu.BE.global.jwt.dto.TokenResponse;
@@ -32,6 +33,7 @@ import java.security.Key;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Date;
+import java.util.Optional;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 
@@ -42,14 +44,13 @@ public class TokenService {
     private final JwtUtil jwtUtil;
     private final UserRepository userRepository;
     private final RedisTemplate<String, String> redisTemplate;
+
     private static final String AUTHORITIES_KEY = "auth";
     private static final String BEARER_TYPE = "Bearer";
     private static final String BLACKLIST_PREFIX = "blacklist:";
 
-
     @Value("${jwt.expiration.access-token}")
     private int accessTokenExpiration;
-
     @Value("${jwt.expiration.refresh-token}")
     private int refreshTokenExpiration;
 
@@ -74,10 +75,11 @@ public class TokenService {
     }
 
     public String createAccessToken(String email) {
+        User user = userRepository.findByEmail(email);
         return Jwts.builder()
                 .setSubject(email)
                 .setIssuedAt(new Date(System.currentTimeMillis()))
-                .claim(AUTHORITIES_KEY, Role.USER)
+                .claim(AUTHORITIES_KEY, user.getRole().getKey())
                 .setExpiration(new Date(System.currentTimeMillis() + accessTokenExpiration))
                 .signWith(key, SignatureAlgorithm.HS256)
                 .compact();
@@ -103,12 +105,12 @@ public class TokenService {
         // 클레임에서 권한 정보 가져오기
         Collection<? extends GrantedAuthority> authorities = Arrays.stream(claims.get(AUTHORITIES_KEY).toString().split(","))
                 .map(SimpleGrantedAuthority::new)
-                .collect(Collectors.toList());
+                .toList();
 
         User user = userRepository.findByEmail(claims.getSubject());
         UserDetails principal = new PrincipalDetails(user);
 
-        return new UsernamePasswordAuthenticationToken(principal, "", authorities);
+        return new UsernamePasswordAuthenticationToken(principal, "", principal.getAuthorities());
     }
 
     // 토큰 정보를 검증하는 메서드
